<resources>
    <string name="app_name">Material</string>

    <!-- Test strings -->
    <string name="button_theme_1">Theme #1</string>
    <string name="button_theme_2">Theme #2</string>
    <string name="button_theme_3">Theme #3</string>
    <string name="button_theme_4">Theme #4</string>
    <string name="button_theme_5">Theme #5</string>

    <string name="button_go_to_colors">Colors</string>

    <string name="menu_settings">Settings</string>

    <string name="hint_edit_text">Введите текст:</string>
    <string name="hint_edit_error">Ошибка</string>


    <!-- Drawer menu strings -->
    <string name="menu_home">Главная</string>
    <string name="menu_theme">Выбор темы</string>

    <!-- Common drawer string -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

</resources>