<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:layout_marginTop="?attr/actionBarSize">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonThemeOne"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:text="@string/button_theme_1"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonThemeTwo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonThemeTwo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:text="@string/button_theme_2"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThemeOne"
        app:layout_constraintBottom_toTopOf="@+id/buttonThemeThree"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonThemeThree"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:elevation="15dp"
        android:text="@string/button_theme_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThemeTwo"/>

</androidx.constraintlayout.widget.ConstraintLayout>